# anml

./: .gitignore  .readthedocs.yml  .travis.yml  CHANGELOG.md  CHANGELOG.rst  CONTRIBUTING.md  CONTRIBUTING.rst  LICENSE  MANIFEST.in  README.md  README.rst  conf.py  index.rst  pyproject.toml  setup.py  tox.ini
.github/workflows/: build.yml
docs/: .buildinfo  Makefile  genindex.html  glossary.html  index.html  index.rst  installation.html  objects.inv  py-modindex.html  requirements-doc.txt  search.html  searchindex.js
docs/_modules/: index.html
docs/_sources/: index.rst.txt  installation.rst.txt
docs/api_reference/: anml.bootstrap.html  anml.data.html  anml.getter.html  anml.model.html  anml.models.html  anml.parameter.html  anml.prior.html  anml.solvers.html  anml.variable.html  index.html
docs/source/: conf.py  index.rst  installation.rst
notebooks/: data.ipynb  prior.ipynb
sphinx/: conf.py  index.rst  installation.rst
sphinx/api_reference/: anml.getter.rst
src/anml/: __about__.py  exceptions.py  utils.py
src/docs/: Makefile  conf.py  glossary.rst
src/placeholder/: __about__.py  exceptions.py
tests/data/: test_component.py  test_data.py  test_data_prototype.py  test_data_specs.py  test_example.py  test_validator.py
tests/getter/: test_prior.py  test_spline.py
tests/model/: test_example.py  test_prototype.py
tests/models/: test_base_model.py
tests/parameter/: test_likelihood.py  test_main.py  test_parameter.py  test_prior.py  test_processors.py  test_smoothmap.py  test_smoothmapping.py  test_spline_variable.py  test_variables.py
(+114 files in other folders)
