[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools>=61",
]

[project]
name = "anml"
version = "0.1.0"
description = "This is a nonlinear modeling library."
readme = "README.md"
license = { text = "BSD-2-Clause" }
requires-python = ">=3.6"
authors = [
    { name = "IHME Math Sciences", email = "ihme.math.sciences@gmail.com" },
]

dependencies =[
    "numpy<2.0.0",
    "pandas",
    "scipy",
    "xspline",
    "click"
]

[project.urls]
homepage = "https://github.com/ihmeuw-msca/anml"

[tool.pytest.ini_options]
testpaths = ["tests", "integration"]
addopts = "-v -ra -q"
log_cli = true
log_cli_level = "INFO"
log_format = "%(asctime)s %(levelname)s %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"
minversion = "6.0"
filterwarnings = "ignore"

[project.optional-dependencies]
docs = [
    "sphinx>=3.0.0",
    "sphinx-autodoc-typehints",
    "furo",
    "sphinx-click",
    "IPython",
    "matplotlib"
]
test = [
    "pytest",
    "pytest-mock"
]
dev = [
    "sphinx>=3.0.0",
    "sphinx-autodoc-typehints",
    "furo",
    "sphinx-click",
    "IPython",
    "matplotlib",
    "pytest",
    "pytest-mock"
]
